fix images for deployment